compiler/testData/diagnostics/tests/collectionLiterals/basicVariable.fir.kt
fun main() {
    val foo = [1]
    acceptList(<!ARGUMENT_TYPE_MISMATCH!>foo<!>)
}

fun acceptList(s: List<Int>) {}
